src/objects/UIS_Account_Role_Details__c.object
<CustomObject>
    <description>UIS Account Role Details</description>
    <fields>
        <fullName>Account_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Role</description>
        <inlineHelpText>Account Role</inlineHelpText>
        <label>Account Role</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>UIS Account Role Details</relationshipLabel>
        <relationshipName>UIS_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Customer Number</description>
        <inlineHelpText>Customer Number</inlineHelpText>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>Customer Type</description>
        <inlineHelpText>Customer Type</inlineHelpText>
        <label>Customer Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>UIS Account Role Detail</label>
    <nameField>
        <displayFormat>UAR-{00000}</displayFormat>
        <label>UIS Account Role Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UIS Account Role Details</pluralLabel>
    <recordTypes>
        <fullName>Amsterdam_Publications</fullName>
        <active>true</active>
        <description>Amsterdam Publications</description>
        <label>Amsterdam Publications</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>